--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -8,16 +8,16 @@
     "intro_text2": "استخدم ميزة الدردشة للمشاركة في الاقتراع لمشاركة صوتك وطرح الأسئلة",
     "opinions": "آراء",
     "intro_text3": "عرض نتائج الاستطلاع الحالية والسابقة ومشاركة النتيجة على قنوات التواصل الاجتماعي",
-    "welcome": "مرحبا بك في",
+    "welcome": "أهلا بك",
 
     "continu": "يكمل",
     "more": "أكثر",
-    "choose_program": "حدد برنامج U-Report",
+    "choose_program": "حدد برنامج",
     "enter_message": "أدخل رسالة",
 
     "settings": "إعدادات",
     "about_us": "معلومات عنا",
-    "change_ureport_program": "برنامج تغيير تقرير يو",
+    "change_ureport_program": "برنامج التغيير",
     "change_language": "تغيير اللغة",
     "feedback": "استجابة",
     "privacy_policy": "سياسة خاصة",
@@ -26,6 +26,28 @@
     "on": "تشغيل",
     "off": "اطفء",
     "select_language": "اختار اللغة",
-    "language": "لغة"
+    "language": "لغة",
 
+    "see_more": "شاهد المزيد",
+    "featured_story": "قصة مميزة",
+    "read_more": "اقرأ أكثر",
+    "all": "الجميع",
+    "age": "سن",
+    "gender": "جنس تذكير أو تأنيث",
+    "location": "موقع",
+    "search": "بحث",
+    "response_rate": "معدل الاستجابة",
+    "respondents": "المشاركون",
+    "responded_out_of": "استجابت من أصل",
+    "polled": "استفتى",
+    "latest_opinion": "أحدث رأي",
+    "cancel": "يلغي",
+    "selected": "المحدد",
+    "delete": "حذف",
+    "previous_message_deleted": "تم حذف جميع الرسائل السابقة",
+    "delete_message": "هل أنت متأكد أنك تريد حذف؟",
+    "notification": "تنبيه",
+    "five_days_delete_text": "إزالة الرسائل تلقائيًا بعد 5 أيام",
+    "remove_all_message_text": "قم بإزالة كافة الرسائل",
+    "remove": "يزيل"
 }
