--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -8,7 +8,7 @@
     "intro_text2": "Utilice la función de chat para participar en las encuestas para compartir su voz y hacer preguntas",
     "opinions": "Opiniones",
     "intro_text3": "Vea los resultados de encuestas actuales y anteriores y comparta los resultados en los canales de las redes sociales",
-    "welcome": "Bienvenido a",
+    "welcome": "Bienvenido",
     "continu": "Continuar",
     "more": "Más",
     "choose_program": "Seleccione el programa U-Report",
@@ -16,7 +16,7 @@
 
     "settings": "Ajustes",
     "about_us": "Sobre nosotros",
-    "change_ureport_program": "Cambiar programa de U-report",
+    "change_ureport_program": "Programa de cambio",
     "change_language": "Cambiar idioma",
     "feedback": "Realimentación",
     "privacy_policy": "Política de privacidad",
@@ -25,6 +25,28 @@
     "on": "Sobre",
     "off": "Apagado",
     "select_language": "Seleccione el idioma",
-    "language": "Idioma"
+    "language": "Idioma",
 
+    "see_more": "Ver más",
+    "featured_story": "HISTORIA DESTACADA",
+    "read_more": "LEE MAS",
+    "all": "Todos",
+    "age": "La edad",
+    "gender": "Género",
+    "location": "Localización",
+    "search": "Buscar",
+    "response_rate": "TASA DE RESPUESTA",
+    "respondents": "ENCUESTADOS",
+    "responded_out_of": "respondió fuera de",
+    "polled": "encuestado",
+    "latest_opinion": "ÚLTIMA OPINIÓN",
+    "cancel": "Cancelar",
+    "selected": "Seleccionado",
+    "delete": "Borrar",
+    "previous_message_deleted": "Todo el mensaje anterior fue eliminado",
+    "delete_message": "¿Estas seguro que quieres borrarlo?",
+    "notification": "Notificación",
+    "five_days_delete_text": "Eliminar mensajes automáticamente después de 5 días",
+    "remove_all_message_text": "Eliminar todos los mensajes",
+    "remove": "Eliminar"
 }
