--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -8,15 +8,15 @@
     "intro_text2": "Utilisez la fonction de chat pour participer aux sondages, partager votre voix et poser des questions",
     "opinions": "Des avis",
     "intro_text3": "Affichez les résultats des sondages actuels et précédents et partagez les résultats sur les réseaux sociaux",
-    "welcome": "Bienvenue à",
+    "welcome": "Bienvenu",
     "continu": "Continuer",
     "more": "Suite",
-    "choose_program": "Sélectionnez le programme U-Report",
+    "choose_program": "Sélectionnez le programme",
     "enter_message": "Entrer un message",
 
     "settings": "Paramètres",
     "about_us": "À propos de nous",
-    "change_ureport_program": "Changer le programme U-Report",
+    "change_ureport_program": "Changer de programme",
     "change_language": "Changer de langue",
     "feedback": "Retour d'information",
     "privacy_policy": "Politique de confidentialité",
@@ -25,6 +25,28 @@
     "on": "Au",
     "off": "Désactivé",
     "select_language": "Choisir la langue",
-    "language": "Langue"
+    "language": "Langue",
 
+    "see_more": "Voir plus",
+    "featured_story": "HISTOIRE EN VEDETTE",
+    "read_more": "LIRE LA SUITE",
+    "all": "Tout",
+    "age": "Âge",
+    "gender": "Genre",
+    "location": "Emplacement",
+    "search": "Chercher",
+    "response_rate": "TAUX DE RÉPONSE",
+    "respondents": "RÉPONDANTS",
+    "responded_out_of": "répondu hors de",
+    "polled": "interrogé",
+    "latest_opinion": "DERNIER AVIS",
+    "cancel": "Annuler",
+    "selected": "Choisi",
+    "delete": "Effacer",
+    "previous_message_deleted": "Tous les messages précédents ont été supprimés",
+    "delete_message": "Etes-vous sûr que vous voulez supprimer?",
+    "notification": "Notification",
+    "five_days_delete_text": "Supprimer automatiquement les messages après 5 jours",
+    "remove_all_message_text": "Supprimer tous les messages",
+    "remove": "Supprimer"
 }
