--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -8,7 +8,7 @@
     "intro_text2": "Используйте функцию чата, чтобы участвовать в опросах, чтобы поделиться своим голосом и задать вопросы",
     "opinions": "Мнения",
     "intro_text3": "Просматривайте текущие и предыдущие результаты опроса и делитесь результатами в социальных сетях",
-    "welcome": "Добро пожаловать в",
+    "welcome": "Добро пожаловать",
     "continu": "Продолжать",
     "more": "Более",
     "choose_program": "Выберите программу U-Report",
@@ -16,7 +16,7 @@
 
     "settings": "Настройки",
     "about_us": "О нас",
-    "change_ureport_program": "Изменить программу U-report",
+    "change_ureport_program": "Изменить программу",
     "change_language": "Изменить язык",
     "feedback": "Обратная связь",
     "privacy_policy": "Политика конфиденциальности",
@@ -25,6 +25,28 @@
     "on": "На",
     "off": "Выключенный",
     "select_language": "Выбрать язык",
-    "language": "Язык"
+    "language": "Язык",
 
+    "see_more": "Узнать больше",
+    "featured_story": "ИЗБРАННАЯ ИСТОРИЯ",
+    "read_more": "ПОДРОБНЕЕ",
+    "all": "Все",
+    "age": "Возраст",
+    "gender": "Пол",
+    "location": "Место нахождения",
+    "search": "Поиск",
+    "response_rate": "СКОРОСТЬ ОТКЛИКА",
+    "respondents": "РЕСПОНДЕНТЫ",
+    "responded_out_of": "ответил из",
+    "polled": "опрошенный",
+    "latest_opinion": "ПОСЛЕДНЕЕ МНЕНИЕ",
+    "cancel": "Отмена",
+    "selected": "Выбрано",
+    "delete": "Удалить",
+    "previous_message_deleted": "Все предыдущее сообщение было удалено",
+    "delete_message": "Вы уверены, что хотите удалить?",
+    "notification": "Уведомление",
+    "five_days_delete_text": "Автоматически удалять сообщения через 5 дней",
+    "remove_all_message_text": "Удалить все сообщения",
+    "remove": "Удалять"
 }
