--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -8,7 +8,7 @@
     "intro_text2": "使用聊天功能参与投票，分享您的声音并提出问题",
     "opinions": "意见",
     "intro_text3": "查看当前和以前的投票结果并在社交媒体渠道上分享结果",
-    "welcome": "欢迎来到",
+    "welcome": "歡迎",
     "continu": "继续",
     "more": "更多的",
     "choose_program": "选择 U-Report 计划",
@@ -16,7 +16,7 @@
 
     "settings": "设置",
     "about_us": "关于我们",
-    "change_ureport_program": "改变U-report计划",
+    "change_ureport_program": "改變計劃",
     "change_language": "改变语言",
     "feedback": "回馈",
     "privacy_policy": "隐私政策",
@@ -25,6 +25,28 @@
     "on": "在",
     "off": "离开",
     "select_language": "选择语言",
-    "language": "语"
+    "language": "语",
 
+    "see_more": "查看更多",
+    "featured_story": "特色故事",
+    "read_more": "閱讀更多",
+    "all": "全部",
+    "age": "年龄",
+    "gender": "性别",
+    "location": "地点",
+    "search": "搜索",
+    "response_rate": "反應速度",
+    "respondents": "受訪者",
+    "responded_out_of": "回應了",
+    "polled": "民意調查",
+    "latest_opinion": "最新意見",
+    "cancel": "取消",
+    "selected": "已選",
+    "delete": "刪除",
+    "previous_message_deleted": "上一條信息已全部刪除",
+    "delete_message": "你確定你要刪除？",
+    "notification": "通知",
+    "five_days_delete_text": "5 天后自動刪除消息",
+    "remove_all_message_text": "刪除所有消息",
+    "remove": "消除"
 }
