Intro page modified

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -3,20 +3,20 @@
     "skip": "يتخطى",
     "next": "التالي",
     "stories": "القصص",
-    "intro_text1": "اقرأ قصص U-Report وقدم ملاحظاتك عبر الإنترنت",
+    "intro_text1": "اقرأ أحدث مدونات U-Report وابق على اطلاع",
     "chat": "دردشة",
-    "intro_text2": "استخدم ميزة الدردشة للمشاركة في الاقتراع لمشاركة صوتك وطرح الأسئلة",
+    "intro_text2": "المشاركة في استطلاعات الرأي والوصول إلى برامج الدردشة التفاعلية حول الموضوعات التي تهمك",
     "opinions": "آراء",
-    "intro_text3": "عرض نتائج الاستطلاع الحالية والسابقة ومشاركة النتيجة على قنوات التواصل الاجتماعي",
+    "intro_text3": "عرض نتائج الاستطلاعات وتبادل النتائج",
     "welcome": "أهلا بك",
 
     "continu": "يكمل",
     "more": "أكثر",
-    "choose_program": "حدد برنامج",
-    "enter_message": "أدخل رسالة",
+    "choose_program": "حدد U-Report الدولة / البرنامج",
+    "enter_message": "أدخل النص هنا",
 
     "settings": "إعدادات",
-    "about_us": "معلومات عنا",
+    "about_us": "عن",
     "change_ureport_program": "برنامج التغيير",
     "change_language": "تغيير اللغة",
     "feedback": "استجابة",
@@ -49,5 +49,7 @@
     "notification": "تنبيه",
     "five_days_delete_text": "إزالة الرسائل تلقائيًا بعد 5 أيام",
     "remove_all_message_text": "قم بإزالة كافة الرسائل",
-    "remove": "يزيل"
+    "remove": "يزيل",
+    "share": "Share",
+    "splashText": "دعونا نقود التغيير معًا"
 }
