--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -3,19 +3,19 @@
     "stories": "Cuentos",
     "skip": "Saltar",
     "next": "Próximo",
-    "intro_text1": "Lea historias de U-Report y brinde comentarios en línea",
+    "intro_text1": "Lea los últimos blogs de U-Report y manténgase informado",
     "chat": "Chat",
-    "intro_text2": "Utilice la función de chat para participar en las encuestas para compartir su voz y hacer preguntas",
+    "intro_text2": "Participe en encuestas y acceda a chatbots interactivos sobre temas que le interesan",
     "opinions": "Opiniones",
-    "intro_text3": "Vea los resultados de encuestas actuales y anteriores y comparta los resultados en los canales de las redes sociales",
+    "intro_text3": "Ver los resultados de las encuestas y compartir los hallazgos",
     "welcome": "Bienvenido",
     "continu": "Continuar",
     "more": "Más",
-    "choose_program": "Seleccione el programa U-Report",
-    "enter_message": "Ingrese mensaje",
+    "choose_program": "Seleccione el país / programa de U-Report",
+    "enter_message": "Introducir texto aquí",
 
     "settings": "Ajustes",
-    "about_us": "Sobre nosotros",
+    "about_us": "Sobre",
     "change_ureport_program": "Programa de cambio",
     "change_language": "Cambiar idioma",
     "feedback": "Realimentación",
@@ -48,5 +48,7 @@
     "notification": "Notificación",
     "five_days_delete_text": "Eliminar mensajes automáticamente después de 5 días",
     "remove_all_message_text": "Eliminar todos los mensajes",
-    "remove": "Eliminar"
+    "remove": "Eliminar",
+    "share": "Share",
+    "splashText": "Impulsemos el cambio juntos"
 }
