--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -3,19 +3,19 @@
     "skip": "Sauter",
     "next": "Prochain",
     "stories": "Histoires",
-    "intro_text1": "Lisez les articles U-Report et donnez votre avis en ligne",
+    "intro_text1": "Lisez les derniers blogs U-Report et restez informé",
     "chat": "Discuter",
-    "intro_text2": "Utilisez la fonction de chat pour participer aux sondages, partager votre voix et poser des questions",
+    "intro_text2": "Participez à des sondages et accédez à des chatbots interactifs sur des sujets qui vous intéressent",
     "opinions": "Des avis",
-    "intro_text3": "Affichez les résultats des sondages actuels et précédents et partagez les résultats sur les réseaux sociaux",
+    "intro_text3": "Afficher les résultats des sondages et partager les résultats",
     "welcome": "Bienvenu",
     "continu": "Continuer",
     "more": "Suite",
-    "choose_program": "Sélectionnez le programme",
-    "enter_message": "Entrer un message",
+    "choose_program": "Sélectionnez le pays/programme U-Report",
+    "enter_message": "Entrez le texte ici",
 
     "settings": "Paramètres",
-    "about_us": "À propos de nous",
+    "about_us": "Sur",
     "change_ureport_program": "Changer de programme",
     "change_language": "Changer de langue",
     "feedback": "Retour d'information",
@@ -48,5 +48,7 @@
     "notification": "Notification",
     "five_days_delete_text": "Supprimer automatiquement les messages après 5 jours",
     "remove_all_message_text": "Supprimer tous les messages",
-    "remove": "Supprimer"
+    "remove": "Supprimer",
+    "share": "Share",
+    "splashText": "Conduisons le changement ensemble"
 }
