--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -3,19 +3,19 @@
     "skip": "Пропускать",
     "next": "Следующий",
     "stories": "Истории",
-    "intro_text1": "Читайте истории U-Report и оставляйте отзывы онлайн",
+    "intro_text1": "Читайте последние блоги U-Report и будьте в курсе",
     "chat": "Чат",
-    "intro_text2": "Используйте функцию чата, чтобы участвовать в опросах, чтобы поделиться своим голосом и задать вопросы",
+    "intro_text2": "Участвуйте в опросах и получайте доступ к интерактивным чат-ботам по интересующим вас темам",
     "opinions": "Мнения",
-    "intro_text3": "Просматривайте текущие и предыдущие результаты опроса и делитесь результатами в социальных сетях",
+    "intro_text3": "Просматривайте результаты опросов и делитесь выводами",
     "welcome": "Добро пожаловать",
     "continu": "Продолжать",
     "more": "Более",
-    "choose_program": "Выберите программу U-Report",
-    "enter_message": "Введите сообщение",
+    "choose_program": "Выберите страну / программу U-Report",
+    "enter_message": "Введите текст здесь",
 
     "settings": "Настройки",
-    "about_us": "О нас",
+    "about_us": "О",
     "change_ureport_program": "Изменить программу",
     "change_language": "Изменить язык",
     "feedback": "Обратная связь",
@@ -48,5 +48,7 @@
     "notification": "Уведомление",
     "five_days_delete_text": "Автоматически удалять сообщения через 5 дней",
     "remove_all_message_text": "Удалить все сообщения",
-    "remove": "Удалять"
+    "remove": "Удалять",
+    "share": "Share",
+    "splashText": "Давайте вместе меняться"
 }
