--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -3,19 +3,19 @@
     "skip": "跳过",
     "next": "下一个",
     "stories": "故事",
-    "intro_text1": "阅读 U-Report 故事并在线提供反馈",
+    "intro_text1": "閱讀最新的 U-Report 博客並隨時了解最新信息",
     "chat": "聊天",
-    "intro_text2": "使用聊天功能参与投票，分享您的声音并提出问题",
+    "intro_text2": "參與民意調查並訪問有關您關心的主題的交互式聊天機器人",
     "opinions": "意见",
-    "intro_text3": "查看当前和以前的投票结果并在社交媒体渠道上分享结果",
+    "intro_text3": "查看民意調查結果並分享調查結果",
     "welcome": "歡迎",
     "continu": "继续",
     "more": "更多的",
-    "choose_program": "选择 U-Report 计划",
-    "enter_message": "输入消息",
+    "choose_program": "選擇 U-Report 國家/計劃",
+    "enter_message": "在此輸入文字",
 
     "settings": "设置",
-    "about_us": "关于我们",
+    "about_us": "關於",
     "change_ureport_program": "改變計劃",
     "change_language": "改变语言",
     "feedback": "回馈",
@@ -48,5 +48,7 @@
     "notification": "通知",
     "five_days_delete_text": "5 天后自動刪除消息",
     "remove_all_message_text": "刪除所有消息",
-    "remove": "消除"
+    "remove": "消除",
+    "share": "Share",
+    "splashText": "讓我們一起推動改變"
 }
