New Click Sound Added

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -52,5 +52,6 @@
     "remove": "يزيل",
     "share": "يشارك",
     "this_message_deleted": "تم حذف هذه الرسالة",
+    "no_result_found": "لم يتم العثور على نتائج",
     "splashText": "دعونا نقود التغيير معًا"
 }
