--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -51,5 +51,7 @@
     "remove": "Eliminar",
     "share": "Cuota",
     "this_message_deleted": "Este mensaje fue eliminado",
+    "no_result_found": "No se han encontrado resultados",
     "splashText": "Impulsemos el cambio juntos"
+
 }
