--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -51,5 +51,6 @@
     "remove": "Supprimer",
     "share": "Partager",
     "this_message_deleted": "Ce message a été supprimé",
+    "no_result_found": "Aucun résultat trouvé",
     "splashText": "Conduisons le changement ensemble"
 }
