--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -51,5 +51,6 @@
     "remove": "Удалять",
     "share": "Делиться",
     "this_message_deleted": "Это сообщение было удалено",
+    "no_result_found": "Результатов не найдено",
     "splashText": "Давайте вместе меняться"
 }
