--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -51,5 +51,6 @@
     "remove": "消除",
     "share": "分享",
     "this_message_deleted": "此消息已被刪除",
+    "no_result_found": "未找到結果",
     "splashText": "讓我們一起推動改變"
 }
