--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -53,5 +53,6 @@
     "share": "يشارك",
     "this_message_deleted": "تم حذف هذه الرسالة",
     "no_result_found": "لم يتم العثور على نتائج",
-    "splashText": "دعونا نقود التغيير معًا"
+    "splashText": "دعونا نقود التغيير معًا",
+    "no_internet_text": "لا يوجد اتصال بالإنترنت"
 }
