--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -52,5 +52,6 @@
     "share": "Partager",
     "this_message_deleted": "Ce message a été supprimé",
     "no_result_found": "Aucun résultat trouvé",
-    "splashText": "Conduisons le changement ensemble"
+    "splashText": "Conduisons le changement ensemble",
+    "no_internet_text": "Aucune connexion Internet n'est disponible"
 }
