--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -52,5 +52,6 @@
     "share": "Делиться",
     "this_message_deleted": "Это сообщение было удалено",
     "no_result_found": "Результатов не найдено",
-    "splashText": "Давайте вместе меняться"
+    "splashText": "Давайте вместе меняться",
+    "no_internet_text": "Нет подключения к Интернету"
 }
