--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -52,5 +52,6 @@
     "share": "分享",
     "this_message_deleted": "此消息已被刪除",
     "no_result_found": "未找到結果",
-    "splashText": "讓我們一起推動改變"
+    "splashText": "讓我們一起推動改變",
+    "no_internet_text": "沒有可用的互聯網連接"
 }
