--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -53,5 +53,9 @@
     "this_message_deleted": "Это сообщение было удалено",
     "no_result_found": "Результатов не найдено",
     "splashText": "Давайте вместе меняться",
-    "no_internet_text": "Нет подключения к Интернету"
+    "no_internet_text": "Нет подключения к Интернету",
+    "get_started": "Начать",
+    "back": "Назад",
+    "exit": "ВЫХОД",
+    "retry": "ПОВТОРИТЬ"
 }
