--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -53,5 +53,9 @@
     "this_message_deleted": "Ce message a été supprimé",
     "no_result_found": "Aucun résultat trouvé",
     "splashText": "Conduisons le changement ensemble",
-    "no_internet_text": "Aucune connexion Internet n'est disponible"
+    "no_internet_text": "Aucune connexion Internet n'est disponible",
+    "get_started": "Commencer",
+    "back": "Arrière",
+    "exit": "SORTIR",
+    "retry": "RÉESSAYEZ"
 }
