--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -31,7 +31,7 @@
     "@intro_text3": {
         "description": "View polls results and share the findings"
     },
-    "welcome": "Benvenuto/a",
+    "welcome": "Benvenutoa",
     "@welcome": {
         "description": "Welcome"
     },
